# QCFuse

./: .gitignore  README.md  apply_sglang_patch.sh  main.py  pyproject.toml  run_data_preprocess.sh  run_fullattn.sh  run_fullattn_2wikimqa_0616.txt  run_qcfuse.sh  run_qcfuse_2wikimqa_0616.txt  run_ruler_preprocess.sh
blend/: blend_common.py  qcfuse_config.py  release_config.py  sglang_blend_ssd.py  utils.py
data/: README.md  build_longbench_data.py  build_ruler_data.py
dev/: qcfuse_2wiki_06251231.txt  qcfuse_wwikimqa_06251201.txt
srt/entrypoints/: engine.py
srt/layers/: logits_processor.py
srt/layers/attention/: base_attn_backend.py  flashattention_backend.py  flashinfer_backend.py  triton_backend.py
srt/layers/attention/triton_ops/: prefill_attention.py
srt/managers/: io_struct.py  schedule_batch.py  scheduler.py  tokenizer_manager.py  tp_worker.py
srt/mem_cache/: chunk_cache.py  radix_cache.py  radix_cache_cpp.py  swa_radix_cache.py
srt/mem_cache/storage/aibrix_kvcache/: README.md
srt/mem_cache/storage/eic/: eic_storage.py  test_unit.py
srt/mem_cache/storage/hf3fs/: storage_hf3fs.py
srt/mem_cache/storage/hf3fs/docs/: README.md  (+1 more)
srt/mem_cache/storage/mooncake_store/: README.md
srt/model_executor/: forward_batch_info.py
srt/models/: chatglm.py  deepseek_v2.py  gemma3_causal.py  glm4.py  llama.py  qwen2.py  qwen3.py
srt/utils/: cache_blender.py  cache_blender_info.py  digest_index_manager.py  indice_select.py  kv_ssd_manager.py  triton_attention_score.py
test/: test_blend_ssd_release.py  test_indice_select_normalization.py
