[project]
name = "qcfuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.0rc1",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.5.1",
    "sglang",
    "transformers>=4.57.1",
]

[tool.uv.sources]
sglang = { git = "https://github.com/sgl-project/sglang.git", subdirectory = "python", rev = "v0.5.4" }
