[project]
name = "qcfuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.0rc1",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.5.1",
    "sglang",
    "transformers>=4.57.1",
    "datasets>=2.20,<3.0",
    "huggingface-hub>=0.34,<1.0",
    "pyarrow>=15,<21",
    "html2text>=2025.4.15",
    "bs4>=0.0.2",
    "wonderwords>=3.0.1",
]

[tool.uv.sources]
sglang = { git = "https://github.com/sgl-project/sglang.git", subdirectory = "python", rev = "v0.5.4" }
